syntax = "proto3";

package com.example.internal.input.reqreply;

import "com/example/commonmodels/error.proto";

option java_multiple_files = true;

message DeletePassByIdRequest {
  string id = 1;
}

message DeletePassByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {}

  message Failure {
    string message = 100;
  }
}
